# micropython-steami-lib

./: .gitattributes  .gitignore  .prettierrc.json  .releaserc.json  .validate-branch-namerc.js  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  commitlint.config.js  env.mk  git-precommit-checks.config.js  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: auto-assign-author.yml  check-commits.yml  python-linter.yml  release.yml  requirements.txt  tests.yml
.husky/: commit-msg  pre-commit
lib/apds9960/: README.md  manifest.py
lib/apds9960/apds9960/: const.py  device.py  exceptions.py
lib/apds9960/examples/: ambient_light.py  color_lamp.py  gesture.py  light_theremin.py  proximity.py
lib/bme280/: README.md  manifest.py
lib/bme280/bme280/: __init__.py  const.py  device.py  exceptions.py
lib/bme280/examples/: basic_reader.py  weather_station.py
lib/bq27441/: README.md  manifest.py
lib/bq27441/bq27441/: __init__.py  const.py  device.py
lib/bq27441/examples/: fuel_gauge.py  tamagotchi.py  tamagotchie.py
lib/daplink_bridge/: README.md  manifest.py
lib/daplink_bridge/daplink_bridge/: __init__.py  const.py  device.py
lib/daplink_flash/: README.md  manifest.py
lib/daplink_flash/daplink_flash/: __init__.py  const.py  device.py
lib/daplink_flash/examples/: config_zone.py  erase_flash.py  flash_info.py  read_file.py  sensor_log.py  write_csv.py
lib/gc9a01/: .not-frozen
lib/hts221/: README.md  manifest.py
lib/hts221/examples/: env_station.py  humidity.py
lib/hts221/hts221/: __init__.py  const.py  device.py
lib/im34dt05/: .not-frozen
lib/ism330dl/: README.md  manifest.py
lib/ism330dl/examples/: basic_read.py  maze_game.py  motion_orientation.py  spirit_level.py  static_orientation.py  test.py  tetris.py
lib/ism330dl/ism330dl/: __init__.py  const.py  device.py  exceptions.py
lib/lis2mdl/: README.md  manifest.py
lib/lis2mdl/examples/: basic_read.py  calibrate_2d.py  compass_display.py  door_sensor.py  field_logger.py  field_map.py  low_power_one_shot.py  magnet_compass.py  magnet_fieldForce.py  magnet_test.py  metal_detector.py  tilt_compensated_heading.py
lib/lis2mdl/exemple/: magnet.py  magnet_compass.py  magnet_fieldForce.py  magnet_test.py
lib/lis2mdl/lis2mdl/: __init__.py  const.py  device.py
lib/mcp23009e/: README.md  manifest.py
lib/mcp23009e/examples/: binary_counter.py  buttons.py  combination_lock.py  dpad_counter.py  dpad_piano.py  i2c_scan.py  menu_navigation.py  morse_code.py  reaction_timer.py  simon.py  sleep_on_button.py  tamagotchie.py  test_basic.py  test_interrupts.py  test_led_simple.py  test_output.py  test_output_active_low.py  test_pin.py  test_pin_irq.py
lib/mcp23009e/mcp23009e/: __init__.py  active_low_pin.py  const.py  device.py  pin.py
lib/ssd1327/: README.md  manifest.py
lib/ssd1327/examples/: bitmap.py  blink_animation.py  framebuf_lines.py  framebuf_pixels.py  framebuf_rects.py  framebuf_scroll.py  framebuf_text.py  hello_world.py  illusion.py  invert.py  lookup_table.py  micropython_logo.py  random_pixels.py  rotating_3d_cube.py  rotation.py  shades.py
lib/ssd1327/ssd1327/: __init__.py  const.py  device.py
lib/steami_config/: README.md  manifest.py
lib/steami_config/examples/: boot_counter.py  show_config.py  (+4 more)
lib/steami_screen/: README.md  manifest.py
lib/vl53l1x/: README.md  manifest.py
lib/wsen-hids/: README.md  manifest.py
lib/wsen-pads/: README.md  manifest.py
scripts/: deploy_usb.py  list_frozen_drivers.py
tests/: TESTING.MD  TESTING.md  conftest.py  report_plugin.py  requirements-test.txt  test_examples.py  test_frozen_manifest.py  test_scenarios.py
tests/fake_machine/: __init__.py  framebuf_stub.py  i2c.py  micropython_stub.py  pin.py
tests/runner/: executor.py  mpremote_bridge.py
tests/scenarios/: apds9960.yaml  bme280.yaml  board_buttons.yaml  board_buzzer.yaml  board_i2c_scan.yaml  board_leds.yaml  board_pins.yaml  board_temperature_comparison.yaml  bq27441.yaml  daplink_bridge.yaml  daplink_flash.yaml  hts221.yaml  ism330dl.yaml  lis2mdl.yaml  mcp23009e.yaml  ssd1327.yaml  steami_config.yaml  steami_screen.yaml  vl53l1x.yaml  wsen_hids.yaml  wsen_pads.yaml
typings/: time.pyi
(+59 files in other folders)
