[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "micropython-steami-lib"
version = "0.16.7"
description = "MicroPython driver library for the STeaMi board."
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["ruff==0.11.6", "micropython-stm32-stubs>=1.24"]
test = ["pytest==7.4.0", "pyyaml==6.0.2", "mpremote>=1.0"]
flash = ["pyocd>=0.44"]

[tool.setuptools]
# No Python packages to install — this project contains MicroPython drivers
packages = []

[project.urls]
Homepage = "https://www.steami.cc/"
Repository = "https://github.com/steamicc/micropython-steami-lib"
Documentation = "https://wiki.steami.cc/"
Issues = "https://github.com/steamicc/micropython-steami-lib/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "mock: tests using FakeI2C (no hardware needed)",
    "hardware: tests requiring a real board (use --port)",
    "manual: tests requiring human validation",
    "board: board qualification tests (no driver, hardware only)",
]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
  "A",      # flake8-builtins: prevent shadowing builtins
  "ASYNC",  # flake8-async
  "B",      # flake8-bugbear: common bug patterns
  "C4",     # flake8-comprehensions
  "C90",    # McCabe cyclomatic complexity
  "DTZ",    # flake8-datetimez
  "E",      # pycodestyle
  "E225",   # (preview) missing whitespace around operator
  "E261",   # (preview) at least two spaces before inline comment
  "E262",   # (preview) inline comment must start with '# '
  "E265",   # (preview) block comment must start with '# '
  "EXE",    # flake8-executable
  "F",      # Pyflakes
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "INT",    # flake8-gettext
  "ISC",    # flake8-implicit-str-concat
  "N802",   # pep8-naming: function name should be lowercase
  "N803",   # pep8-naming: argument name should be lowercase
  "N806",   # pep8-naming: variable in function should be lowercase
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # Pylint
  "PYI",    # flake8-pyi
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules
  "S110",   # flake8-bandit: try-except-pass (no silent exception suppression)
  "SIM",    # flake8-simplify
  "T10",    # flake8-debugger
  "PERF",   # Perflint
  "T20",    # flake8-print: no print() in production code
  "TCH",    # flake8-type-checking
  "W",      # pycodestyle
  "YTT",    # flake8-2020
]
ignore = [
  "B905",    # zip() strict= not available in micropython
  "E501",    # line length, recommended to disable
  "E741",    # 'l' is currently widely used
  "ISC001",  # conflicts with formatter
  "ISC003",  # micropython does not support implicit concatenation of f-strings
  "PIE810",  # micropython does not support passing tuples to .startswith or .endswith
  "PLC1901", # compare to empty string
  "PLR1704", # sometimes desirable to redefine an argument to save code size
  "PLR1714", # consider merging multiple comparisons
  "PLR5501", # use elif instead of else+if
  "PLW0602", # global variable not assigned
  "PLW0603", # global statement
  "PLW2901", # overwriting loop variable
  "RUF012",  # mutable class variable
  "RUF100",  # unused noqa
  "SIM101",  # merge isinstance calls (micropython compat)
  "SIM105",  # contextlib.suppress not available in micropython
  "W191",    # tab-indent, redundant when using formatter
]

[tool.ruff.lint.isort]
known-third-party = ["micropython"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pylint]
allow-magic-value-types = ["bytes", "int", "str"]
max-args = 10
max-branches = 25
max-returns = 8
max-statements = 65

[tool.ruff.lint.per-file-ignores]
# manifest.py files are evaluated with some global names pre-defined
"**/manifest.py" = ["F821"]
"**/examples/*.py" = ["T20", "N806"]
"lib/mcp23009e/examples/i2c_scan.py" = ["PERF203"]
"tests/**/*.py" = ["T20", "PLR0911", "PLR0912", "PLR0915"]
"lib/lis2mdl/**/*.py" = ["RUF001", "RUF002", "RUF003"]  # µ (microtesla) is intentional
"scripts/**/*.py" = ["T20", "PERF203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
